Fix status label ahora wrappea los mensajes en multiples lineas

--- a/client/src/resources/mqtt.css
+++ b/client/src/resources/mqtt.css
@@ -1,7 +1,3 @@
-.greenBg {
-    background: #005826;
-}
-
 #connect_btn {
     background: green;
     font-weight: bold;
